# pyChatGPT

./: .gitignore  README.md  convert_mkv_wav.py  pyproject.toml  speech-to-text.py
.github/workflows/: publish.yml
src/pyChatGPT/: Auth0.py  __main__.py  pyChatGPT.py
