[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyChatGPT"
version = "0.1.0"
authors = [
    { name="terry3041", email="s71czbem@duck.com" },
]
description = "An unofficial Python wrapper for OpenAI's ChatGPT API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests',
    'uuid',
]

[project.urls]
"Homepage" = "https://github.com/terry3041/pyChatGPT"
"Bug Tracker" = "https://github.com/terry3041/pyChatGPT/issues"
